<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/drawer_group_payments"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_payments_list_option"
            android:title="@string/navigation_payments_list" />
        <item
            android:id="@+id/drawer_payments_generate_option"
            android:title="@string/navigation_payments_generate" />
    </group>
    <group
        android:id="@+id/drawer_group_charges"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_charges_list_option"
            android:title="@string/navigation_charges_list" />
        <item
            android:id="@+id/drawer_charges_generate_option"
            android:title="@string/navigation_charges_generate" />
    </group>
    <group
        android:id="@+id/drawer_group_mail"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_charges_mail_option"
            android:title="@string/navigation_create_mail" />
    </group>
</menu>
